--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Event Apps Kickoff</title>
+    <title>Firebase form sandbox</title>
     <meta name="description" content="">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body data-path="https://mea-kickoffs.firebaseio.com/test" data-jwt="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhZG1pbiI6ZmFsc2UsImRlYnVnIjpmYWxzZSwiZCI6eyJuYW1lIjoidGVzdCIsInVpZCI6IjEwIn0sInYiOjAsImlhdCI6MTQzODQ3NjM0M30.2aRRjumSLB0kz7lQL2-eYGL0vJmKPHXS4x6aWPceHog">
 
 text: <input type="text" value="" name="text" data-path="/text"/> <br>
 number: <input type="number" value="" name="number" data-path="/number"/> <br>
 textarea: <textarea data-path="/textarea"></textarea> <br>
 checkbox: <input type="checkbox" data-path="/checkbox"/> <br>
-<div data-path="contacts" data-type="collection">
+<div data-path="/contacts" data-type="collection">
     <fieldset>
         <legend>Contact Info</legend>
         First: <input type="text" data-path="first"/>
         Last: <input type="text" data-path="last"/>
         Email: <input type="email" data-path="email"/>
-        Photo: <div style="max-width: 100px; max-height: 100px; display: inline-block; vertical-align: middle; background-color:black;" >
+        Photo: <div style="max-width: 100px; min-height: 100px; display: inline-block; vertical-align: middle; background-color:black;" data-show="photo">
             <img data-path="photo" style="max-width: 100px;"/>
             <button data-action="remove" data-path="photo" style="display: block; width: 100%">Delete Photo</button>
           </div>
